--- a/BanThing/app/build.gradle
+++ b/BanThing/app/build.gradle
@@ -28,7 +28,11 @@ dependencies {
     compile 'com.android.support:design:24.2.1'
     compile 'com.google.firebase:firebase-core:9.6.1'
     compile 'com.google.firebase:firebase-database:9.6.1'
+    compile 'com.github.bumptech.glide:glide:3.7.0'
+    compile 'jp.wasabeef:glide-transformations:2.0.1'
     testCompile 'junit:junit:4.12'
+    compile 'com.android.support:cardview-v7:24.+'
+    compile 'com.android.support:recyclerview-v7:24.+'
 }
 
 apply plugin: 'com.google.gms.google-services'
