--- a/BanThing/app/src/main/AndroidManifest.xml
+++ b/BanThing/app/src/main/AndroidManifest.xml
@@ -9,9 +9,10 @@
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
         android:supportsRtl="true"
-        android:theme="@style/AppTheme">
+        android:theme="@style/BanThingTheme">
 
-        <activity android:name=".Login">
+        <activity android:name=".Login"
+                  android:theme="@style/AppTheme.NoActionBar">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
                 <category android:name="android.intent.category.LAUNCHER" />
@@ -19,11 +20,7 @@
         </activity>
 
         <activity
-            android:name=".MainActivity"
-            android:label="@string/title_activity_main"
-            android:theme="@style/AppTheme.NoActionBar" />
-        <activity android:name=".StoreDetail">
-        </activity>
+            android:name=".MainActivity" />
     </application>
 
 </manifest>
