--- a/BanThing/app/src/main/AndroidManifest.xml
+++ b/BanThing/app/src/main/AndroidManifest.xml
@@ -2,7 +2,7 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.hongseokandrewjang.android.banthing">
 
-    <uses-permission android:name="android.permission.INTERNET"/>
+    <uses-permission android:name="android.permission.INTERNET" />
 
     <application
         android:allowBackup="true"
@@ -10,17 +10,24 @@
         android:label="@string/app_name"
         android:supportsRtl="true"
         android:theme="@style/BanThingTheme">
-
-        <activity android:name=".Login"
-                  android:theme="@style/AppTheme.NoActionBar">
+        <meta-data android:name="com.facebook.sdk.ApplicationId" android:value="@string/facebook_app_id"/>
+        <activity
+            android:name=".Loading"
+            android:theme="@style/AppTheme.NoActionBar">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
+
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-
-        <activity
-            android:name=".MainActivity" />
+        <activity android:name=".MainActivity" />
+        <activity android:name=".SignIn" />
+        <activity android:name="com.facebook.FacebookActivity"
+            android:configChanges=
+                "keyboard|keyboardHidden|screenLayout|screenSize|orientation"
+            android:theme="@style/com_facebook_activity_theme"
+            android:label="@string/app_name" />
+        <activity android:name=".Purchase"></activity>
     </application>
 
 </manifest>
