--- a/BanThing/app/build.gradle
+++ b/BanThing/app/build.gradle
@@ -27,13 +27,20 @@ dependencies {
     })
     compile 'com.android.support:appcompat-v7:24.2.1'
     compile 'com.android.support:design:24.2.1'
+
+    // Add firebase dependencies
     compile 'com.google.firebase:firebase-core:9.6.1'
     compile 'com.google.firebase:firebase-database:9.6.1'
+
+    // Glide
     compile 'com.github.bumptech.glide:glide:3.7.0'
     compile 'jp.wasabeef:glide-transformations:2.0.1'
     testCompile 'junit:junit:4.12'
+
     compile 'com.android.support:cardview-v7:24.+'
     compile 'com.android.support:recyclerview-v7:24.+'
+
+    // Facebook Login
     compile 'com.facebook.android:facebook-android-sdk:4.17.0'
 }
 
