--- a/BanThing/app/src/main/AndroidManifest.xml
+++ b/BanThing/app/src/main/AndroidManifest.xml
@@ -3,6 +3,7 @@
     package="com.hongseokandrewjang.android.banthing">
 
     <uses-permission android:name="android.permission.INTERNET" />
+    <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE"/>
 
     <application
         android:allowBackup="true"
